@@ -1,3 +1,5 @@
+26Dec16=======================================================================
+1. Fix some possible routes to $myalias callsigns becoming nodes.
 22Nov16=======================================================================
 1. Add CTY-2614 prefixes
 21Nov16=======================================================================
